# video-summarizer

./: .enc.env  .pre-commit-config.yaml  01_split_audio.py  02_asr.py  03_summarize.py  04_create_markdown.py  README.md  config.py  pyproject.toml  test.py
templates/: summarize_prompt.jinja2
