[project]
name = "video-summarization"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "nemo-toolkit[asr]>=2.6.2",
    "onnxruntime>=1.24.1",
    "pyannote-audio>=4.0.4",
    "pydub>=0.25.1",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
