[project]
name = "video-summarization"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    #    "nemo-toolkit[asr]>=2.6.2",
    "nemo-toolkit[asr]>=2.6.1",
    "numpy>=1.21.0",
    #    "pyannote-audio>=4.0.4",
    "pyannote-audio>=3.4.0",
    "pydub>=0.25.1",
    "speechbrain>=1.0.3",
    "torch==2.8.0",
]

[tool.uv]
package = false

[tool.uv.sources]
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git", rev = "develop" }
